<resources>
    <string name="app_name">LapLip</string>

    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>

    <string name="email">Email</string>

    <string name="email_invalid_message">Email is not valid.</string>
    <string name="email_code_sent_message">We have sent the authenticate code to your email</string>
    <string name="enter_code_message">Please enter authenticate code</string>
    <string name="connection_error_message">Connection Error</string>

    <string name="access_too_many_message">Please try again after </string>
    <string name="code_invalid_message">You entered invalid code</string>
    <string name="seconds"> seconds</string>
</resources>
