<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".fragment.AuthenticateFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_code_sent_message"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_message"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:gravity="center"
        android:background="@drawable/edit_text_bordered"
        tools:text="123456"
        android:textSize="20sp"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/login"
        />

</LinearLayout>